--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"vitest": "^1.4.0"
 	},
 	"type": "module"
 }
