--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.37",
-		"prettier": "^3.1.1",
+		"prettier": "3.2.5",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
