--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.5.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"lodash": "^4.17.21",
+		"socket.io-client": "^4.7.5"
+	}
 }
