--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -14,6 +14,7 @@ jobs:
       packages: write
       contents: read
       attestations: write
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
