Let's just remove verification👍

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -38,10 +38,10 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME}}/${{ vars.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: ${{ vars.REGISTRY }}/${{ vars.IMAGE_NAME }}
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
+      #- name: Generate artifact attestation
+      #  uses: actions/attest-build-provenance@v1
+      #  with:
+      #    subject-name: ${{ vars.REGISTRY }}/${{ vars.IMAGE_NAME }}
+      #    subject-digest: ${{ steps.push.outputs.digest }}
+      #    push-to-registry: true
 
