--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -13,8 +13,8 @@ jobs:
     permissions:
       packages: write
       contents: read
-      attestations: write
-      id-token: write
+      #attestations: write
+      #id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
