--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,6 +6,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  IMAGE: ${{ secrets.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -13,21 +16,22 @@ jobs:
     permissions:
       packages: write
       contents: read
-      #attestations: write
-      #id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: many5900/magic_board
+          images: ${{ env.IMAGE }}
+
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
@@ -35,12 +39,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME}}/${{ vars.IMAGE_NAME }}:latest
+          tags: ${{ env.IMAGE }}:latest
           labels: ${{ steps.meta.outputs.labels }}
-      #- name: Generate artifact attestation
-      #  uses: actions/attest-build-provenance@v1
-      #  with:
-      #    subject-name: ${{ vars.REGISTRY }}/${{ vars.IMAGE_NAME }}
-      #    subject-digest: ${{ steps.push.outputs.digest }}
-      #    push-to-registry: true
 
