--- a/.gitignore
+++ b/.gitignore
@@ -136,8 +136,8 @@ node_modules
 /build
 /.svelte-kit
 /package
-.env
-.env.*
+#.env
+#.env.*
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
