implement chat functionality

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PUBLIC_REST_API_PORT=5123
 PUBLIC_SOCKET_API_PROTOCOL=ws
 PUBLIC_SOCKET_API_HOSTNAME=localhost
 PUBLIC_SOCKET_API_PORT=5123
+PUBLIC_DATABASE_IP=64.227.121.226
+PUBLIC_DATABASE_PORT=8000
